Fixed missing padding

--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ button {
 }
 
 .page-nav {
-    padding: ;
+    padding: 20px 20px;
 }
 
 [data-tab-content] {
